# app/Http/Controllers/Admin/CategoryController.php
@@ -1,0 +1,144 @@
+<?php
+
+namespace App\Http\Controllers\Admin;
+
+use App\Http\Controllers\Controller;
+use Illuminate\Http\Request;
+use App\Models\Category;
+use Illuminate\Support\Facades\Validator;
+use Illuminate\Support\Str;
+
+class CategoryController extends Controller
+{
+    /**
+     * @OA\Get(
+     *     path="/categories",
+     *     tags={"Categories"},
+     *     summary="Get list of categories",
+     *     @OA\Response(response=200, description="List of categories")
+     * )
+     */
+    public function index()
+    {
+        return response()->json(Category::paginate(10));
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/categories/{id}",
+     *     tags={"Categories"},
+     *     summary="Get categories detail",
+     *     @OA\Parameter(name="id", in="path", required=true, @OA\Schema(type="integer")),
+     *     @OA\Response(response=200, description="Categories detail"),
+     *     @OA\Response(response=404, description="Categories not found")
+     * )
+     */
+    public function show($id)
+    {
+        $category = Category::findOrFail($id);
+        return response()->json($category);
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/categories",
+     *     tags={"Categories"},
+     *     summary="Create new categories",
+     *     @OA\RequestBody(
+     *          required=true,
+     *          @OA\MediaType(
+     *              mediaType="multipart/form-data",
+     *              @OA\Schema(
+     *                  required={"name"},
+     *                  @OA\Property(property="name", type="string", example="Truck"),
+     *              )
+     *          )
+     *     ),
+     *     @OA\Response(response=201, description="Categories created successfully")
+     * )
+     */
+    public function store(Request $request)
+    {
+        $validator = Validator::make($request->all(), [
+            'name'              => 'required|string|max:255',
+        ]);
+
+        if ($validator->fails()) {
+            return response()->json([
+                'message' => 'Validation failed',
+                'errors'  => $validator->errors()
+            ], 422);
+        }
+
+        $validated = $validator->validated();
+        $validated['slug'] = Str::slug($validated['name']);
+        $car = Category::create($validated);
+
+        return response()->json([
+            'message' => 'Car created successfully',
+            'data' => $car,
+        ], 201);
+    }
+
+    /**
+     * @OA\Put(
+     *     path="/categories/{id}",
+     *     tags={"Categories"},
+     *     summary="Update categories",
+     *     @OA\Parameter(name="id", in="path", required=true, @OA\Schema(type="integer")),
+     *     @OA\RequestBody(
+     *          required=true,
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\Schema(
+     *                  required={"name"},
+     *                  @OA\Property(property="name", type="string", example="Truck"),
+     *              )
+     *          )
+     *     ),
+     *     @OA\Response(response=200, description="Categories updated successfully")
+     * )
+     */
+    public function update(Request $request, $id)
+    {
+        $category = Category::findOrFail($id);
+
+        $validator = Validator::make($request->all(), [
+            'name'              => 'required|string|max:255',
+        ]);
+
+        if ($validator->fails()) {
+            return response()->json([
+                'message' => 'Validation failed',
+                'errors'  => $validator->errors()
+            ], 422);
+        }
+
+        $validated = $validator->validated();
+        $validated['slug'] = Str::slug($validated['name']);
+        $category->update($validated);
+
+        return response()->json([
+            'message' => 'Categories updated successfully',
+            'data' => $category
+        ]);
+    }
+
+    /**
+     * @OA\Delete(
+     *     path="/categories/{id}",
+     *     tags={"Categories"},
+     *     summary="Delete categories",
+     *     @OA\Parameter(name="id", in="path", required=true, @OA\Schema(type="integer")),
+     *     @OA\Response(response=200, description="Categories deleted successfully"),
+     *     @OA\Response(response=404, description="Categories not found")
+     * )
+     */
+    public function destroy($id)
+    {
+        $category = Category::findOrFail($id);
+        $category->delete();
+
+        return response()->json(['message' => 'Categories deleted successfully']);
+    }
+}
